--- a/src/pages/editCurriculo/styleEdit.css
+++ b/src/pages/editCurriculo/styleEdit.css
@@ -6,6 +6,7 @@ body{
     font-family: 'Varela Round', sans-serif;
  
 }
+
 .main-edit{
 
     width: 100%;
@@ -106,9 +107,9 @@ body{
  }
  .style-modal{
     width: 90%;
-    max-width: 500px;
-    height: 530px;
-    background-color: #fff;
+    max-width: 400px;
+    height: 400px;
+    background-color: rgb(198, 198, 198);
     padding: 10px;
     border-radius: 10px;
     
@@ -186,6 +187,7 @@ body{
     align-items: center;
     font-size: 10px;
     letter-spacing: 1px;
+    justify-content: center;
  }
  .container-foto-card{
     width: 100%;
@@ -198,6 +200,42 @@ body{
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 70px;
+ }
+ .visible-info{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 10px 22px 2px #0a0a0a2e;
+ }
+ .title-dados-pessoais{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    background-color: #e2e2e2;
+    border-radius: 8px;
+ }
+ .title-dados-pessoais > h3{
+    margin-top: 10px;
+ }
+ .close-modal-edit{
+    border: none;
+    background-color: #009a9a00;
+    margin-top: 60px;
+ }
+ .informacoes-container{
+    padding: 4px;
+    font-size: 12px;
+    width: 100%;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 10px 22px 2px #0a0a0a2e;
  }
  @media only screen and (max-width:950px){
     .main-edit{   
