--- a/src/pages/profile/styles.css
+++ b/src/pages/profile/styles.css
@@ -29,7 +29,7 @@ body{
     font-family: 'Varela Round', sans-serif;
     border-top-left-radius: 80px;
     border-bottom-right-radius: 80px;
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 .label-avatar{
@@ -119,6 +119,33 @@ body{
     border-top-right-radius: 20px;
     border-bottom-right-radius: 80px;
     margin-right: 20px;
+}
+.box-container-profile{
+    display: flex;
+    height: 24px;  
+    flex-direction: row;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;  
+    margin-top: 50px;
+}
+
+.box-container-profile > h5{
+    width: 300px;
+    background-color: #37373a;
+    color: #f6dfff;
+    font-size: 15px; 
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+ 
+}
+.box-line-profile{
+    height: 4px;
+    width: 100px;
+    background-color: #d27af5;
+    border-radius: 10px;
 }
 @media only screen and (max-width:950px){
     .style-card-avatar{
