--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Dancing+Script&family=Exo+2:wght@300&family=Jost:wght@300&family=Khand:wght@300;400;500;600&family=Quicksand:wght@300;500&family=Reem+Kufi&family=Saira:wght@200;300&family=Source+Sans+Pro:wght@200&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Dancing+Script&family=Exo+2:wght@300&family=Jost:wght@300&family=Khand:wght@300;400;500;600&family=Quicksand:wght@300;500&family=Reem+Kufi&family=Saira:wght@200;300&family=Source+Sans+Pro:wght@200&family=Ubuntu:wght@500&family=Varela+Round&display=swap');
 body{
     margin: 0;
     padding: 0;
@@ -95,7 +95,6 @@ body{
     margin: 10px;    
 }
 
-
 .line-style{
     background-color: #25b797;
     height: 10px;
@@ -105,7 +104,6 @@ body{
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 }
-
 
 .carousel{
     align-items: center;
@@ -701,7 +699,7 @@ width: 100%;
 }
 .guia > label{
     font-size: 15px;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     color:#37373a;
     font-weight: 700;
     margin-top: -10px;
