--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -481,6 +481,8 @@ width: 100%;
    flex-direction: row;
    font-size: 8px;
    font-family: 'Varela Round', sans-serif;
+   width: 100px;
+   margin-left: 30px;
 }
 .row-formation-view{
     display: flex;
@@ -891,6 +893,13 @@ width: 100%;
     .line-style{
     width: 380px;
     }
+    .row-cursos > div{
+   
+        margin-top: -27px;
+      }
+      .row-cursos > div> span{
+        font-size: 5px;  
+     }
     
 }
 
