--- a/src/Components/templates/temp2/temp2.css
+++ b/src/Components/templates/temp2/temp2.css
@@ -163,11 +163,11 @@
    font-size: 9px;
    color: rgb(76, 10, 123);
    margin-left:30px;
-   font-family: 'Saira', sans-serif;
    font-weight: 600;
-   margin-top: 30px;
+   margin-top: 35px;
    display: flex;
    justify-content: flex-start;
+   padding: 10px;
   
    
 }
@@ -188,10 +188,11 @@
     margin-left: 32px;
     margin-right: 25px;
     margin-bottom: -43px;
+    
  }
 @media only screen and (max-width:1240px){
     .container-form-temp-2{
-    height: 120%;  
+    height: 140%;  
 }
     .nome-temp-2 >h5{
         color: rgb(255, 255, 255);
@@ -227,7 +228,7 @@
     .label-info-mini-temp-2> label{
         font-size: 9px;
         color: rgb(76, 10, 123);
-        margin-left:30px;
+        margin-left:20px;
         justify-content: flex-start;
          margin-top: 30px;     
     }
